--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,19 +1,30 @@
 pipeline {
-    agent {
-        docker {
+    agent any /*{*/
+       /* docker {
             image 'maven:3-alpine'
             args '-v /root/.m2:/root/.m2'
-        }
-    }
+        }*/
+    /*}*/
     stages {
+		stage('Checkout-git'){
+            /* when {
+                    branch 'master'
+             }*/
+               steps{
+                echo 'Revisando repositorio del Proyecto Kaizen'
+					git poll: true, url: 'https://github.com/kaizenportal/jenkinsfile-maven-junit.git'
+               }
+        }
         stage('Build') {
             steps {
-                sh 'mvn -B -DskipTests clean package'
+				bat 'C:\\maven-3.6.2\\bin\\mvn -B -DskipTests clean package'
+                //sh 'mvn -B -DskipTests clean package'
             }
         }
         stage('Test') {
             steps {
-                sh 'mvn test'
+				bat 'C:\\maven-3.6.2\\bin\\mvn test'
+                //sh 'mvn test'
             }
             post {
                 always {
@@ -23,7 +34,9 @@ pipeline {
         }
         stage('Deliver') {
             steps {
-                sh './jenkins/scripts/deliver.sh'
+				echo 'Deploy del jar'
+				//bat 'java -jar target/'
+                //sh './jenkins/scripts/deliver.sh'
             }
         }
     }
