--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
         stage('Deliver') {
             steps {
 				echo 'Deploy del jar'
-				//bat 'java -jar target/'
+				bat 'java -jar target/my-app-1.0-SNAPSHOT.jar --httpPort=8082'
                 //sh './jenkins/scripts/deliver.sh'
             }
         }
