--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,29 +1,21 @@
 pipeline {
-    agent any /*{*/
-       /* docker {
-            image 'maven:3-alpine'
-            args '-v /root/.m2:/root/.m2'
-        }*/
-    /*}*/
+    agent any        
     stages {
-		stage('Checkout-git'){
-            /* when {
-                    branch 'master'
-             }*/
-               steps{
+        stage('Checkout-git'){            
+            steps{
                 echo 'Revisando repositorio del Proyecto Kaizen'
-					git poll: true, url: 'https://github.com/kaizenportal/jenkinsfile-maven-junit.git'
-               }
-        }
+                git poll: true, url: 'https://github.com/kaizenportal/jenkinsfile-maven-junit.git'
+            } 
+        }    
         stage('Build') {
             steps {
-				bat 'C:\\maven-3.6.2\\bin\\mvn -B -DskipTests clean package'
+		bat 'C:\\maven-3.6.2\\bin\\mvn -B -DskipTests clean package'
                 //sh 'mvn -B -DskipTests clean package'
             }
         }
         stage('Test') {
             steps {
-				bat 'C:\\maven-3.6.2\\bin\\mvn test'
+		bat 'C:\\maven-3.6.2\\bin\\mvn test'
                 //sh 'mvn test'
             }
             post {
@@ -34,10 +26,11 @@ pipeline {
         }
         stage('Deliver') {
             steps {
-				echo 'Deploy del jar'
-				bat 'java -jar target/my-app-1.0-SNAPSHOT.jar --httpPort=8082'
+		echo 'Deploy del jar'
+		bat 'java -jar target/my-app-1.0-SNAPSHOT.jar --httpPort=8082'
                 //sh './jenkins/scripts/deliver.sh'
             }
         }
     }
 }
+
